fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -76,6 +76,7 @@ p.about{
 	color:#FA8072;
 	margin-left:60px !important;
 	margin-top: 0px;
+	line-height: 20px
 }
 
 .hello{
